--- a/src/styles/_helpers/_variables.scss
+++ b/src/styles/_helpers/_variables.scss
@@ -6,7 +6,7 @@ $base-font-size: 62.5%; //1 rem = 10px
 $base-line-height: 1.2;
 
 $o-color-nav: rgb(27, 32, 42);
-$o-color-main: rgb(0, 169, 255);
+$o-color-main: #DB0000;
 $o-color-bg: rgb(20, 28, 36);
 $o-color-red: #c23616;
 $o-color-yellow: #fbc531;
