--- a/src/styles/base/_font.scss
+++ b/src/styles/base/_font.scss
@@ -7,4 +7,4 @@
 //  font-style: normal;
 //}
 
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500i,900');
