--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,5 +1,126 @@
 .home {
+  &__inner {
+    display: flex;
+    height: calc(100vh - 120px);
+    padding: 0 5%;
+  }
+  &__details {
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: Roboto;
+    margin-left: 14px;
+    &__title {
+      flex: 2;
+      display: flex;
+      align-items: flex-end;
+      @include font-size(44px);
+      margin-bottom: 40px;
+      font-weight: 500;
+      color: rgba(black, .8);
+      position: relative;
+      line-height: 60px;
+      animation: appear-delay .5s ease-in-out;
+      animation-iteration-count: 1;
+      &::before {
+        content: '';
+        position: absolute;
+        height: 200px;
+        width: 400px;
+        background-color: rgba(red, .2);
+        top: 20%;
+        left: -50px;
+        animation: appear-delay-slide .5s ease-in-out;
+        animation-iteration-count: 1;
+        animation-delay: 3s;
+        animation-fill-mode: forwards;
+        opacity: 0;
+      }
+    }
+    &__description {
+      flex: 3;
+      @include font-size(24px);
+      font-weight: 100;
+    }
+  }
+  &__pics {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    flex: 4;
+    &__row {
+      display: flex;
+      height: 100%;
+      width: 100%;
+      justify-content: flex-end;
+      align-items: flex-end;
+      margin-bottom: 30px;
+      margin-top: -30px;
+      &:last-child {
+        margin: 0;
+        align-items: flex-start;
+      }
+    }
+    &__item {
+
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
+      &.asd {
+        margin-top: 70px;
+        height: 230px;
+        width: 470px;
+        background-image: url('https://images.unsplash.com/photo-1471138406156-7a89e687a062?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
+        background-position: center center;
+        background-size: cover;
+        display: flex;
+        align-items: flex-end;
+        animation: photo-appear-1 2s ease-in-out;
+        animation-iteration-count: 1;
+        animation-delay: .8s;
+        animation-fill-mode: forwards;
+        opacity: 0;
+      }
+      &.asd2 {
+        margin-top: 70px;
+        height: 300px;
+        width: 250px;
+        background-image: url('https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80');
+        background-position: center center;
+        background-size: cover;
+        animation: photo-appear-2 1s ease-in-out;
+        animation-iteration-count: 1;
+      }
+      &.asd3 {
+        height: 300px;
+        width: 200px;
+        background-image: url('https://images.unsplash.com/photo-1519378058457-4c29a0a2efac?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=648&q=80');
+        background-position: center center;
+        background-size: cover;
+        animation: photo-appear-3 1s ease-in-out;
+        animation-delay: 1.8s;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+        opacity: 0;
+      }
+      &.asd4 {
+        height: 300px;
+        width: 600px;
+        background-image: url('https://images.unsplash.com/photo-1496858705185-1f25b056e4a7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80');
+        background-position: center center;
+        background-size: cover;
+        animation: photo-appear-4 1s ease-in-out;
+        animation-iteration-count: 1;
+        animation-delay: .5s;
+        animation-fill-mode: forwards;
+        opacity: 0;
+      }
+    }
+  }
   &__anim {
+    //position
     height: 100vh;
     width: 100vw;
     background-color: black;
@@ -16,7 +137,7 @@
       }
     }
     &__line {
-      background: rgba(white, .3);
+      background: rgba(white, .25);
       width: 0;
       height: 2px;
       animation: anim-line cubic-bezier(.45,1.04,.75,.97);
@@ -49,5 +170,87 @@
   }
   100% {
     height: 100px;
+  }
+}
+
+@keyframes photo-appear-1 {
+  0% {
+    width: 1px;
+    height: 1px;
+    opacity: 1;
+  }
+  50% {
+    width: 1px;
+    height: 230px;
+  }
+  100% {
+    width: 470px;
+    opacity: 1;
+  }
+}@keyframes photo-appear-2 {
+  0% {
+    width: 1px;
+    height: 1px;
+  }
+  50% {
+    width: 250px;
+    height: 1px;
+  }
+  100% {
+    height: 300px;
+  }
+}@keyframes photo-appear-3 {
+  0% {
+    width: 1px;
+    height: 1px;
+    opacity: 1;
+  }
+  50% {
+    width: 1px;
+    height: 300px;
+  }
+  100% {
+    width: 200px;
+    opacity: 1;
+  }
+}
+
+@keyframes photo-appear-4 {
+  0% {
+    width: 1px;
+    height: 1px;
+    opacity: 1;
+  }
+  50% {
+    width: 1px;
+    height: 300px;
+  }
+  100% {
+    width: 600px;
+    opacity: 1;
+  }
+}
+
+@keyframes appear-delay {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes appear-delay-slide {
+  0% {
+    opacity: 1;
+    width: 1px;
+  }
+  50% {
+    opacity: 1;
+    height: 200px;
+  }
+  100% {
+    width: 400px;
+    opacity: 1;
   }
 }
